--- a/modulo2/projeto-portfolio/Sobre-Min.html
+++ b/modulo2/projeto-portfolio/Sobre-Min.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./portfolio.css">
-    <title>Portifólio</title>
+    <link rel="stylesheet" href="./style-SobreMim.css">
+    <title>Sobre Mim</title>
 </head>
 <body>
     <div class="Header">
@@ -13,17 +13,13 @@
             <button id="Botão-Home"><a style="text-decoration: none;" href="./index.html">Home</a> </button> 
             <button id="Botão-Sobre-Mim"><a style="text-decoration: none;" href="./Sobre-Min.html">Sobre mim</a> </button><br>
             <button id="Botão-Projetos"><a style="text-decoration: none;" href="./Projetos.html">Projetos</a></button> 
-            
     </div>
+    <div class="main">
 
-    <div class="main">      
-    <div class="Nome-Principal">
-        <h1>Ana Chaves</h1>
-        <h2>Full Stack Developer</h2>
     </div>
-    </div>
-   <div class="footer">
+    <div class="footer">
 
-   </div>
+    </div>
+    
 </body>
 </html>
