--- a/modulo2/projeto-portfolio/index.html
+++ b/modulo2/projeto-portfolio/index.html
@@ -12,9 +12,15 @@
 
     </div>
     <div class="Nome-Principal">
-        <h1>Ana Chaves</h1>
+        <h1>Ana Julia Chaves</h1>
         <h2>Full Stack Developer</h2>
+        <p></p>
     </div>
+    <main>
+        <img class="imagem-eu" src="./img/WhatsApp Image 2022-03-28 at 22.16.00 (1).jpeg" alt="">
+        <div class="esfumado" ></div>
+        
+    </main>
    
 </body>
 </html>
