Labetube versão responsive

--- a/modulo2/css-labetube/index.html
+++ b/modulo2/css-labetube/index.html
@@ -58,7 +58,7 @@
         </div>
     </main>
     <footer>
-        <h1>Oi! Eu moro no footer!</h1>
+        <h1 class="titulo-footer">Oi! Eu moro no footer!</h1>
     </footer>
 </body>
 </html>
