--- a/modulo2/css-labetube/video2.html
+++ b/modulo2/css-labetube/video2.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./video.css">
-    <title>video1</title>
+    <link rel="stylesheet" href="./style-videos.css">
+    <title>video2</title>
 </head>
 <body>
     <header>
-        <h1 class="Titulo">FutureTube</h1>
-        <a class="Home" href="./index.html" >HOME</a>
+        <h1 class="logo">FutureTube</h1>
+        <a class="home" href="./index.html" >HOME</a>
     </header>
     <main>
         <h1 class="nome-video">Nome do Video</h1>
-        <div class="video-container">
-            <video src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4" controls></video>
-        </div>
+        
+            <video class="tamanho-video" src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4" controls></video>
+
     </main>
     <footer>
         <h1>Oi! Eu moro no footer!</h1>
